fix mousewheel. use visible and 'last x points' to control the trails for each visible user. render better last-seen strings
Ignore-this: 88ea023020b7d0179233b454d061bb27

darcs-hash:20120501064737-312f9-4d7b3973c314190ad1ec9ecb138d1e13dd0c7560.gz

--- a/static/style.css
+++ b/static/style.css
@@ -35,9 +35,9 @@ body {
     font-weight: bold;
     padding: 3px;
 }
-.personRow > .on  {float:left; width: 65px;}
+.personRow > x.on  {float:left; width: 65px;}
 .personRow > .showing  {}
-.personRow > .follow  {float:left; width: 70px;}
+.personRow > x.follow  {float:left; width: 70px;}
 .personRow > .xlastSeen:after {
     content: ".";
     display: block;
@@ -51,7 +51,7 @@ body {
     width: 335px;
 }
 
-.controls {
+.xcontrols {
     float:right;
 }
 table td {
